--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -23,7 +23,10 @@
   margin-right: auto;
   width: 50%;
 }
-
+.row{
+  margin-left: 0px;
+  margin-right: 0px;
+}
 .menuuser {
   padding-top: 5%;
   padding-bottom: 5%;
