--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -98,8 +98,11 @@
                                             class="no-print btn btn-danger"
                                             *ngIf="(role=='gerente' && user.unidade == v.unidade && v.waitestornostatus == 0)"
                                             (click)="estornaVenda(i)">Estorno</button>
-                                        <button style="float: right;" class="no-print btn btn-dark"
+                                        <button style="float: right; margin-left: 7px;" class="no-print btn btn-dark"
                                             *ngIf="role == 'admin'" (click)="editVenda(i)">Editar Venda</button>
+                                        <button style="float: right; margin-left: 7px;"
+                                            class="no-print btn btn-danger" *ngIf="(role=='admin')"
+                                            (click)="deletaVenda(i)">Apagar Venda</button>
                                         <!-- <button style="float: right;" class="no-print btn btn-success">Nova venda</button> -->
                                     </div>
                                 </div>
@@ -194,6 +197,9 @@
                                         <button style="float: right; margin-left: 7px; color: white;"
                                             class="no-print btn btn-success" *ngIf="role == 'admin'"
                                             (click)="cancelaEstorno(i)">Cancel. Estorno</button>
+                                        <button style="float: right; margin-left: 7px;"
+                                            class="no-print btn btn-danger" *ngIf="(role=='admin')"
+                                            (click)="deletaVenda(i)">Apagar Venda</button>
                                         <!-- <button style="float: right;" class="no-print btn btn-dark" *ngIf="role == 'admin'"
                                 (click)="editVenda(i)">Editar Venda</button> -->
                                         <!-- <button style="float: right;" class="no-print btn btn-success">Nova venda</button> -->
@@ -299,6 +305,9 @@
                                             class="no-print btn btn-danger"
                                             *ngIf="(role=='gerente' && user.unidade == v.unidade && v.waitestornostatus == 0)"
                                             (click)="estornaVenda(i)">Estorno</button>
+                                        <button style="float: right; margin-left: 7px;"
+                                            class="no-print btn btn-danger" *ngIf="(role=='admin')"
+                                            (click)="deletaVenda(i)">Apagar Venda</button>
                                         <!-- <button style="float: right;" class="no-print btn btn-dark" *ngIf="role == 'admin'"
                                 (click)="editVenda(i)">Editar Venda</button> -->
                                         <!-- <button style="float: right;" class="no-print btn btn-success">Nova venda</button> -->
@@ -405,6 +414,9 @@
                                             class="no-print btn btn-danger"
                                             *ngIf="(role=='gerente' && user.unidade == v.unidade && v.waitestornostatus == 0)"
                                             (click)="estornaVenda(i)">Estorno</button>
+                                        <button style="float: right; margin-left: 7px;"
+                                            class="no-print btn btn-danger" *ngIf="(role=='admin')"
+                                            (click)="deletaVenda(i)">Apagar Venda</button>
                                         <!-- <button style="float: right;" class="no-print btn btn-dark" *ngIf="role == 'admin'"
                                 (click)="editVenda(i)">Editar Venda</button> -->
 
@@ -528,6 +540,9 @@
                                         <button style="float: right; margin-left: 7px; color: white;"
                                             class="no-print btn btn-success" *ngIf="role == 'admin'"
                                             (click)="cancelaEstorno(i)">Cancel. Estorno</button>
+                                        <button style="float: right; margin-left: 7px;"
+                                            class="no-print btn btn-danger" *ngIf="(role=='admin')"
+                                            (click)="deletaVenda(i)">Apagar Venda</button>
                                         <!-- <button style="float: right;" class="no-print btn btn-dark" *ngIf="role == 'admin'"
                                 (click)="editVenda(i)">Editar Venda</button> -->
 
@@ -660,6 +675,9 @@
                                             class="no-print btn btn-danger"
                                             *ngIf="(role=='gerente' && user.unidade == v.unidade && v.waitestornostatus == 0)"
                                             (click)="estornaVenda(i)">Estorno</button>
+                                        <button style="float: right; margin-left: 7px;"
+                                            class="no-print btn btn-danger" *ngIf="(role=='admin')"
+                                            (click)="deletaVenda(i)">Apagar Venda</button>
                                         <!-- <button style="float: right;" class="no-print btn btn-dark" *ngIf="role == 'admin'"
                                 (click)="editVenda(i)">Editar Venda</button> -->
 
